--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,12 @@ a {
   color: #F2A47A;
   opacity: 1;
 }
+p {
+  font-size: 1.5em; /* 40px/16=2.5em */
+  font-family: monaco;
+  color: #F2A47A;
+  opacity: 1;
+}
 body {
   background-color: #ffffe6;
 }
