--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 h1 {
   display: inline-block;
   padding: 0 0.5rem;
-  font-size: 2em; /* 40px/16=2.5em */
+  font-size: 4em; /* 40px/16=2.5em */
   font-family: copperplate;
   color: #001f4d;
   /* opacity: 1;*/
@@ -11,7 +11,7 @@ h2 {
   display: inline-block;
   padding: 0 0.5rem;
   font-size: 2em; /* 40px/16=2.5em */
-  font-family: monaco;
+  font-family: copperplate;
   color: #003d99;
   /* opacity: 1;*/
 }
