--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ h2 {
   padding: 0 0.5rem;
   font-size: 2em; /* 40px/16=2.5em */
   font-family: copperplate;
-  color: #4169E1;
+  color: #663399;
   /* opacity: 1;*/
 }
 h3 {
