--- a/css/main.css
+++ b/css/main.css
@@ -1,25 +1,19 @@
 
 h1 {
-  { text-align: center }
-  display: inline-block;
-  padding: 0 0.5rem;
+  text-align: center;
   font-size: 4em; /* 40px/16=2.5em */
   font-family: copperplate;
   color: #191970;
   /* opacity: 1;*/
 }
 h2 {
-  { text-align: center }
-  display: inline-block;
-  padding: 0 0.5rem;
+  text-align: center;
   font-size: 3em; /* 40px/16=2.5em */
   font-family: copperplate;
   color: #663399;
   /* opacity: 1;*/
 }
 h3 {
-  display: inline-block;
-  padding: 0 0.5rem;
   font-size: 2em; /* 40px/16=2.5em */
   font-family: cursive;
   color: #663399;
