--- a/css/main.css
+++ b/css/main.css
@@ -44,6 +44,8 @@ body {
   max-width: 40em;
   padding: 0 5%;
   margin: 0 auto;
+  min-device-width: 320px;
+  max-device-width: 480px;
 }
 
 /* Flexible images */
@@ -52,3 +54,4 @@ img {
   max-width: 50%;
   height: auto;
 }
+ 
