--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ h2 {
 }
 h3 {
   font-size: 2em; /* 40px/16=2.5em */
-  font-family: cursive;
+  font-family: optima;
   color: #663399;
   /* opacity: 1;*/
 }
