--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ h2 {
 h3 {
   font-size: 2em; /* 40px/16=2.5em */
   font-family: optima;
-  color: #663399;
+  color: #0052cc;
   /* opacity: 1;*/
 }
 
