--- a/css/main.css
+++ b/css/main.css
@@ -2,14 +2,14 @@
 h1 {
   text-align: center;
   font-size: 4em; /* 40px/16=2.5em */
-  font-family: copperplate;
+  font-family: courier;
   color: #191970;
   /* opacity: 1;*/
 }
 h2 {
   text-align: center;
   font-size: 3em; /* 40px/16=2.5em */
-  font-family: copperplate;
+  font-family: courier new;
   color: #663399;
   /* opacity: 1;*/
 }
