--- a/css/main.css
+++ b/css/main.css
@@ -49,6 +49,7 @@ body {
 .byline {
   font-size: 1em;
   font-weight: bold
+  font-family: courier new;
   text-transform: uppercase;
   margin-top: 1em
 
