--- a/css/main.css
+++ b/css/main.css
@@ -48,10 +48,10 @@ body {
 
 .byline {
   font-size: 1em;
-  font-weight: bold
-  font-family: courier new;
+  font-weight: bold;
   text-transform: uppercase;
-  margin-top: 1em
+  font-family: courier new;
+  margin-top: 1em;
 
 }
 
