--- a/css/main.css
+++ b/css/main.css
@@ -77,27 +77,27 @@ img {
   height: auto;
 }
 
-img alt="Push"{
+img="Push"{
   max-width: 50%;
   height:auto;
 }
 
-img alt="Save"{
+img="Save"{
   max-width: 50%;
   height:auto;
 }
 
-img alt="Plug"{
+img="Plug"{
   max-width: 50%;
   height:auto;
 }
 
-img alt="Print"{
+img="Print"{
   max-width: 50%;
   height:auto;
 }
 
-img alt="Turn on"{
+img="Turn on"{
   max-width: 50%;
   height:auto;
 }
