--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-
 h1 {
   text-align: center;
   font-size: 4em; /* 40px/16=2.5em */
@@ -20,25 +19,67 @@ h3 {
   /* opacity: 1;*/
 }
 
+h4 {
+  font-size: 1.2em;
+  font-family: courier new;
+  color: #adb5bd;
+}
+
+#tagline {
+  position: relative;
+  padding: 1em;
+}
+
+#tagline::before {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: "";
+  width: 40%;
+  padding-top: 2em;
+  border-top: 0.1em solid #f8f9fa;
+  border-left: 0.1em solid #f8f9fa;
+}
+
+ #tagline::after {
+  content: ""
+  display: block;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  content: "";
+  width: 40%;
+  padding-top: 2em;
+  border-bottom: 0.1em solid #f8f9fa;
+  border-right: 0.1em solid #f8f9fa;
+}
+
 li a {
   font-size: 1em; /* 40px/16=2.5em */
+  font-weight: normal;
 }
 
-h3 {
+ol li{
+  font-size: 2.5em; /* 40px/16=2.5em */
   font-family: courier new;
   color: #adb5bd;
+  font-weight: bold;
+  /* opacity: 1;*/
 }
 
-ol {
-  font-family: courier new;
-  color: #adb5bd;
+.list ul{
+  list-style: circle;
+  padding-left: 1em;
 }
 
-li {
+ul li {
   font-size: 1em; /* 40px/16=2.5em */
   font-family: optima;
     color: #f8f9fa;
+    font-weight: normal;
     opacity: 1;
+    list-style: circle;
 }
 
 a {
@@ -46,6 +87,101 @@ a {
   font-family: optima;
   color: #6c757d;
   opacity: 1;
+}
+
+#how-to-find {
+  margin:auto;
+  position: relative;
+  padding: 1em;
+  max-width: 14em;
+}
+
+#how-to-find::before {
+  display: block;
+  position: absolute;
+  top: ;
+  left: 0;
+  content: "";
+  width: 40%;
+  padding-top: 2em;
+  border-top: 0.1em solid #f8f9fa;
+  border-left: 0.1em solid #f8f9fa;
+}
+
+
+ #how-to-find::after {
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 40%;
+  padding-top: 2em;
+  border-bottom: 0.1em solid #f8f9fa;
+  border-right: 0.1em solid #f8f9fa;
+}
+#how-to-use {
+  margin:auto;
+  position: relative;
+  padding: 1em;
+  max-width: 13em;
+}
+
+#how-to-use::before {
+  display: block;
+  position: absolute;
+  top: ;
+  left: 0;
+  content: "";
+  width: 40%;
+  padding-top: 2em;
+  border-top: 0.1em solid #f8f9fa;
+  border-left: 0.1em solid #f8f9fa;
+}
+
+
+ #how-to-use::after {
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 40%;
+  padding-top: 2em;
+  border-bottom: 0.1em solid #f8f9fa;
+  border-right: 0.1em solid #f8f9fa;
+}
+
+#how-to-print {
+  margin:auto;
+  position: relative;
+  padding: 1em;
+  max-width: 15em;
+}
+
+#how-to-print::before {
+  display: block;
+  position: absolute;
+  top: ;
+  left: 0;
+  content: "";
+  width: 40%;
+  padding-top: 2em;
+  border-top: 0.1em solid #f8f9fa;
+  border-left: 0.1em solid #f8f9fa;
+}
+
+
+ #how-to-print::after {
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 40%;
+  padding-top: 2em;
+  border-bottom: 0.1em solid #f8f9fa;
+  border-right: 0.1em solid #f8f9fa;
 }
 
 p {
@@ -73,6 +209,18 @@ body {
 
 }
 
+.list nav {
+  list-style:circle:
+}
+
+#key-takeaways {
+  margin-left:auto;
+  margin-right:auto;
+  max-width: 13em;
+  border-style:dotted;
+  padding: 1em;
+  color: #f8f9fa;
+}
 
 /* Flexible images */
 
@@ -80,6 +228,8 @@ img {
   max-width: 50%;
   height: auto;
   text-align: center;
+  padding-bottom: 2em;
+  padding-top:.5em;
 }
 
 .center {
