--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ h2 {
   text-align: center;
   font-size: 3em; /* 40px/16=2.5em */
   font-family: courier new;
-  color: #6c757d;
+  color: #899197;
   /* opacity: 1;*/
 }
 h3 {
