--- a/css/main.css
+++ b/css/main.css
@@ -91,7 +91,7 @@ ul li {
 a {
   font-size: 1em; /* 40px/16=2.5em */
   font-family: optima;
-  color: #6c757d;
+  color: #899197;
   opacity: 1;
 }
 
@@ -210,7 +210,7 @@ body {
   font-weight: bold;
   text-transform: uppercase;
   font-family: courier new;
-  color: #6c757d;
+  color: #899197;
   margin-top: 1em;
 
 }
